unpackaged/main/default/objects/SurveyQuestionResponse__c/SurveyQuestionResponse__c.object-meta.xml
<CustomObject>
    <label>Survey Question Response (ATC)</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Question Responses (ATC)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>