unpackaged/main/default/objects/SurveyQuestionResponse__c/fields/ResponseValue__c.field-meta.xml
<CustomField>
    <fullName>ResponseValue__c</fullName>
    <label>Response Value</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>