unpackaged/main/default/objects/SurveyQuestionResponse__c/fields/Survey_Question__c.field-meta.xml
<CustomField>
    <fullName>Survey_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Question</label>
    <referenceTo>SurveyQuestion</referenceTo>
    <relationshipLabel>Survey Question Responses</relationshipLabel>
    <relationshipName>Survey_Question_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>