unpackaged/main/default/objects/SurveyQuestionResponse__c/fields/Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Response</label>
    <referenceTo>SurveyResponse</referenceTo>
    <relationshipLabel>Survey Question Responses</relationshipLabel>
    <relationshipName>Survey_Question_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>