unpackaged/main/default/objects/SurveyQuestionResponse__c/fields/Survey_Response_ATC__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response_ATC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Response (ATC)</label>
    <referenceTo>SurveyResponse__c</referenceTo>
    <relationshipLabel>Survey Question Responses</relationshipLabel>
    <relationshipName>Survey_Question_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>